--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -40,10 +40,10 @@
                 <a class="nav-link" th:href="@{/sign-up}">가입</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/getList}">게시물</a>
+                <a class="nav-link" th:href="@{/post/getList}">게시물</a>
             </li>
             <li class="nav-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link btn btn-outline-primary" th:href="@{/write}">
+                <a class="nav-link btn btn-outline-primary" th:href="@{/post/write}">
                      글 쓰기
                 </a>
             </li>
