--- a/src/main/resources/templates/post/getList.html
+++ b/src/main/resources/templates/post/getList.html
@@ -27,7 +27,7 @@
         <tbody>
         <tr th:each="post : ${boards}">
             <td th:text="${post.id}"></td>
-            <td><a th:href="@{'postContent/' + ${post.id}}"><span th:text="${post.title}"></span></a></td>
+            <td><a th:href="@{'/post/postContent/' + ${post.id}}"><span th:text="${post.title}"></span></a></td>
             <td th:text="${post.dateTime}"></td>
             <td th:text="${post.account.nickname}"></td>
 <!--            <td th:text="${post.countVisit}"></td>-->
