--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -39,7 +39,7 @@
                         <input id="url" type="url" th:field="*{url}" class="form-control"
                                placeholder="http://studyolle.com" aria-describedby="urlHelp" required>
                         <small id="urlHelp" class="form-text text-muted">
-                            블로그, 유튜브 또는 포트폴리오나 좋아하는 웹 사이트 등 본인을 표현할 수 있는 링크를 추가하세요.
+                            인스타,페이스북,유튜브 등.
                         </small>
                         <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
                             옳바른 URL이 아닙니다. 예시처럼 입력해 주세요.
