조회수 aws 설정 중

--- a/src/main/resources/templates/post/getList.html
+++ b/src/main/resources/templates/post/getList.html
@@ -30,13 +30,13 @@
             <td><a th:href="@{'/post/postContent/' + ${post.id}}"><span th:text="${post.title}"></span></a></td>
             <td th:text="${post.dateTime}"></td>
             <td th:text="${post.account.nickname}"></td>
-<!--            <td th:text="${post.countVisit}"></td>-->
+            <td th:text="${post.countVisit}"></td>
         </tr>
         </tbody>
     </table>
 
     <hr/>
-    <div class="container">
+    <div class="containe">
         <div class="row">
             <div class="col">
                 <p><strong>페이지</strong></p>
