--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,7 +20,7 @@
 
 <nav th:fragment="main-nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" href="/" th:href="@{/}">
-        <img src="/images/logo_sm.png" width="30" height="30">
+        <img src="/images/logo_sm.png" width="50" height="50">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -69,8 +69,7 @@
 
 <footer th:fragment="footer">
     <div class="row justify-content-center">
-        <img class="mb-2" src="/images/logo_long_kr.jpg" alt="" width="100">
-        <small class="d-block mb-3 text-muted">&copy; 2022</small>
+        <small class="d-block mb-3 text-muted">hwh  &copy; 2022</small>
     </div>
 </footer>
 
