--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,13 @@
     <div th:replace="fragments.html :: main-nav"></div>
 
     <div class="container">
-        <div class="py-5 text-center">
-            <h2>커뮤니티</h2>
+        <div class="py-3">
+            <h2> </h2>
+            <h2>사용기술 : Spring boot, JPA, Bootstrap, mariaDB</h2>
+            <h2> git : https://github.com/hwangwooh/hwh_community </h2>
+            <a href ="https://github.com/hwangwooh/hwh_community"><h2>git : https://github.com/hwangwooh/hwh_community</h2></a>
+
+
         </div>
 
         <div th:replace="fragments.html :: footer"></div>
