--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 <div th:replace="fragments.html :: main-nav"></div>
 <div class="container">
   <div class="py-5 text-center">
-    <p class="lead">스터디올래</p>
+    <p class="lead">hwh</p>
     <h2>로그인</h2>
   </div>
   <div class="row justify-content-center">
