--- a/src/main/resources/templates/raid/list-raid.html
+++ b/src/main/resources/templates/raid/list-raid.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments.html :: head"></head>
+<body class="bg-light">
+<div th:replace="fragments.html :: main-nav"></div>
+<div class="container">
+    <div class="py-5 text-center">
+
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-sm-10">
+            <div class="row">
+                <div class="col-md-4" th:each="raid: ${raids.getContent()}">
+                    <div class="card mb-4 shadow-sm">
+                        <div class="card-body">
+                            <a  class="text-decoration-none">
+<!--                                th:href="@{'/study/' + ${raid.path}}"-->
+                                <h5 class="card-title context" th:text="${raid.title}"></h5>
+                            </a>
+                            <p class="card-text" th:text="${raid.shortDescription}">Short description</p>
+                            <p class="card-text context">
+                                    <span th:each="tag: ${raid.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
+                                        <a  class="text-decoration-none text-white">
+<!--                                            th:href="@{'/search/tag/' + ${tag}}"-->
+                                            <i class="fa fa-tag"></i> <span th:text="${tag}">Tag</span>
+                                        </a>
+                                    </span>
+                            </p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <small class="text-muted">
+                                    <i class="fa fa-user-circle"></i>
+                                    <span th:text="${raid.members.size()}"></span>명
+                                </small>
+                                <small class="text-muted date" th:text="${raid.publishedDateTime}">9 mins</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-sm-10">
+            <nav>
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" th:classappend="${!raids.hasPrevious()}? disabled">
+                        <a th:href="@{'/raid/list-raid?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${raids.getNumber() - 1}}"
+                           class="page-link" tabindex="-1" aria-disabled="true">
+                            Previous
+                        </a>
+                    </li>
+                    <li class="page-item" th:classappend="${i == raids.getNumber()}? active"
+                        th:each="i: ${#numbers.sequence(0, raids.getTotalPages() - 1)}">
+                        <a th:href="@{'/raid/list-raid?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${i}}"
+                           class="page-link" href="#" th:text="${i + 1}">1</a>
+                    </li>
+                    <li class="page-item" th:classappend="${!raids.hasNext()}? disabled">
+                        <a th:href="@{'/raid/list-raid?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${raids.getNumber() + 1}}"
+                           class="page-link">
+                            Next
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+</div>
+<div th:replace="fragments.html :: footer"></div>
 </body>
 </html>
