--- a/src/main/resources/templates/raid/new-raid.html
+++ b/src/main/resources/templates/raid/new-raid.html
@@ -6,10 +6,10 @@
 
 <div class="container">
     <div class="py-5 text-center">
-        <h2>스터디 개설</h2>
+        <h2>레이드 개설</h2>
     </div>
     <div class="row justify-content-center">
-        <form class="needs-validation col-sm-10" th:action="@{/new-raid}" th:object="${raidDto}" method="post" novalidate>
+        <form class="needs-validation col-sm-10" th:action="@{/raid/new-raid}" th:object="${raidDto}" method="post" novalidate>
 
 
             <div class="form-group">
@@ -34,16 +34,35 @@
                 <small class="form-text text-danger" th:if="${#fields.hasErrors('shortDescription')}" th:errors="*{shortDescription}">ShortDescription Error</small>
             </div>
 
+        <div class="form-group">
+                <label>레이드몹</label>
+            <select name="tag" id="tag" th:value="${raidDto.tag}">
+                <option th:selected="${raidDto.tag}=='1'">발탄</option>
+                <option th:selected="${raidDto.tag}=='2'">아브</option>
+                <option th:selected="${raidDto.tag}=='3'">쿠크</option>
+                <option th:selected="${raidDto.tag}=='4'">비아</option>
+                <option th:selected="${raidDto.tag}=='5'">일리</option>
+                <option th:selected="${raidDto.tag}=='6'">카멘</option>
+            </select>
+        </div>
+<!--            <div class="form-group">-->
+<!--                <label>레이드몹</label>-->
+<!--                <select  th:field="${raidDto.tag}" th:value="${raidDto.tag}">-->
+<!--                    <option selected>몬스터 선택</option>-->
+<!--                    <option th:value="'발탄'" th:text="발탄"></option>-->
+<!--                    <option th:value="'아브'" th:text="아브"></option>-->
+<!--                </select>-->
+<!--            </div>-->
+
 
             <div class="form-group">
                 <button class="btn btn-primary btn-block" type="submit"
-                        aria-describedby="submitHelp">스터디 만들기</button>
+                        aria-describedby="submitHelp">만들기</button>
             </div>
         </form>
     </div>
 
     <div class="fragments.html :: footer"></div>
 </div>
-<script th:replace="fragments.html :: form-validation"></script>
 </body>
 </html>
