--- a/src/main/resources/templates/raid/list-raid.html
+++ b/src/main/resources/templates/raid/list-raid.html
@@ -13,15 +13,14 @@
                 <div class="col-md-4" th:each="raid: ${raids.getContent()}">
                     <div class="card mb-4 shadow-sm">
                         <div class="card-body">
-                            <a  class="text-decoration-none">
-<!--                                th:href="@{'/study/' + ${raid.path}}"-->
+                            <a  class="text-decoration-none" th:href="@{'/raid/raid-hom/' + ${raid.id}}">
+
                                 <h5 class="card-title context" th:text="${raid.title}"></h5>
                             </a>
                             <p class="card-text" th:text="${raid.shortDescription}">Short description</p>
                             <p class="card-text context">
-                                    <span th:each="tag: ${raid.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
+                                    <span th:each="tag: ${raid.tag}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
                                         <a  class="text-decoration-none text-white">
-<!--                                            th:href="@{'/search/tag/' + ${tag}}"-->
                                             <i class="fa fa-tag"></i> <span th:text="${tag}">Tag</span>
                                         </a>
                                     </span>
