--- a/src/main/resources/templates/post/getList.html
+++ b/src/main/resources/templates/post/getList.html
@@ -26,22 +26,23 @@
         </thead>
         <tbody>
         <tr th:each="post : ${boards}">
-            <td th:text="${post.id}"></td>
-            <td><a th:href="@{'/post/postContent/' + ${post.id}}"><span th:text="${post.title}"></span></a></td>
-            <td th:text="${post.dateTime}"></td>
-            <td th:text="${post.account.nickname}"></td>
-            <td th:text="${post.countVisit}"></td>
+            <td class="col-1" th:text="${post.id}"></td>
+            <td><a th:href="@{'/post/postContent/' + ${post.id}}"><span class="col-4" th:text="${post.title}"></span></a></td>
+            <td class="col-2" th:text="${post.dateTime}"></td>
+            <td class="col-2" th:text="${post.account.nickname}"></td>
+            <td class="col-1" th:text="${post.countVisit}"></td>
         </tr>
         </tbody>
     </table>
 
     <hr/>
-    <div class="containe">
+    <div class="row justify-content-center">
         <div class="row">
             <div class="col">
-                <p><strong>페이지</strong></p>
                 <ul class="pagination" th:if="${totalPage != 0}">
-                    <li class="page-item"><a class="page-link" th:href="@{/post/getList(page=${boards.pageable.pageNumber - 1}, searchText=${param.searchText})}">이전</a></li>
+                    <li class="page-item">
+                        <a class="page-link" th:href="@{/post/getList(page=${boards.pageable.pageNumber - 1}, searchText=${param.searchText})}">이전</a>
+                    </li>
                     <li class="page-item" th:classappend="${page == boards.pageable.pageNumber + 1} ? 'disabled'" th:each="page : ${#numbers.sequence(startPage, endPage)}">
                         <a class="page-link" th:href="@{/post/getList(page=${page - 1}, searchText=${param.searchText})}" th:text="${page}"> </a>
                     </li>
