--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -17,10 +17,10 @@
                 </button>
             </div>
             <div class="row">
-                <h2 class="col-sm-12" th:text="${account.nickname}">whiteship</h2>
+                <h2 class="col-sm-12" th:text="${account.nickname}">test123</h2>
             </div>
             <div class="row mt-3">
-                <form class="col-sm-6" action="#"
+                <form class="needs-validation col-12" action="#"
                       th:action="@{/settings/profile}" th:object="${profile}" method="post" novalidate>
                     <div class="form-group">
                         <label for="bio">한 줄 소개</label>
@@ -37,7 +37,7 @@
                     <div class="form-group">
                         <label for="url">링크</label>
                         <input id="url" type="url" th:field="*{url}" class="form-control"
-                               placeholder="http://studyolle.com" aria-describedby="urlHelp" required>
+                               placeholder="https://www.instagram.com/" aria-describedby="urlHelp" required>
                         <small id="urlHelp" class="form-text text-muted">
                             인스타,페이스북,유튜브 등.
                         </small>
@@ -51,19 +51,11 @@
                         <input id="company" type="text" th:field="*{occupation}" class="form-control"
                                placeholder="어떤 일을 하고 계신가요?" aria-describedby="occupationHelp" required>
                         <small id="occupationHelp" class="form-text text-muted">
-                            개발자? 매니저? 취준생? 대표님?
+                            ex) 1450 바드
                         </small>
                     </div>
 
-                    <div class="form-group">
-                        <label for="location">활동 지역</label>
-                        <input id="location" type="text" th:field="*{location}" class="form-control"
-                               placeholder="Redmond, WA, USA"
-                               aria-describedby="locationdHelp" required>
-                        <small id="locationdHelp" class="form-text text-muted">
-                            주요 활동(사는 곳이나 직장을 다니는 곳 또는 놀러 다니는 곳) 지역의 도시 이름을 알려주세요.
-                        </small>
-                    </div>
+
                     <div class="form-group">
                         <button class="btn btn-primary btn-block" type="submit"
                                 aria-describedby="submitHelp">수정하기</button>
