--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -136,6 +136,19 @@
 
 </div>
 
+
+<div th:fragment="raid-menu" class="list-group">
+    <a class="list-group-item list-group-item-action"  href="#" th:href="@{/raid/list-raid}" >홈</a>
+    <a class="list-group-item list-group-item-action"  href="#" th:href="@{/raid/list-raid/me}" >참가중인 레이드</a>
+    <a class="list-group-item list-group-item-action"  href="#"  th:href="@{'/raid/list-raid?tag=발탄'}">발탄</a>
+    <a class="list-group-item list-group-item-action"  href="#"  th:href="@{'/raid/list-raid?tag=아브'}">아브</a>
+    <a class="list-group-item list-group-item-action"  href="#" th:href="@{'/raid/list-raid?tag=쿠크'}" >쿠크</a>
+    <a class="list-group-item list-group-item-action"  href="#" th:href="@{'/raid/list-raid?tag=비아'}" >비아</a>
+    <a class="list-group-item list-group-item-action"  href="#" th:href="@{'/raid/list-raid?tag=일리'}" >일리</a>
+    <a class="list-group-item list-group-item-action"  href="#" th:href="@{'/raid/list-raid?tag=카멘'}" >카멘</a>
+
+</div>
+
 <script type="application/javascript" th:inline="javascript" th:fragment="ajax-csrf-header">
     $(function() {
         var csrfToken = /*[[${_csrf.token}]]*/ null;
