--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -9,13 +9,29 @@
     <div class="row">
         <div class="col-sm-12">
             <h2>글수정</h2>
-            <form  th:object="${postDto}" th:action="@{${postDto.id}}" method="post" novalidate>
+            <form  th:object="${postDto}" th:action="@{/post/edit/{id}(id = ${postDto.id})}" method="post" novalidate>
+
+
                 <div class="form-group">
-                    <input id="title" type="text" th:text="'제목 : ' + ${postDto.title}" th:field="*{title}" class="form-control"  name = "title">
+                    <label for="title">제목</label>
+                    <input id="title" type="text" th:field="*{title}" class="form-control"
+                           aria-describedby="titleHelp" required minlength="3" maxlength="20">
+                    <small id="titleHelp" class="form-text text-muted">
+                        2-20자 이내로 입력하세요.
+                    </small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title Error</small>
                 </div>
+
                 <div class="form-group">
-                    <textarea id="content" th:text="${postDto.content}" th:field="*{content}"  class="form-control" rows="5"  name = "content"></textarea>
+                    <label for="content">내용</label>
+                    <textarea id="content" type="textarea" th:field="*{content}" class="form-control" rows="8"
+                              aria-describedby="contentHelp" required minlength="3" maxlength="300"></textarea>
+                    <small id="contentHelp" class="form-text text-muted">
+                        3-300자 이내로 짧은 소개해 주세요.
+                    </small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">ShortDescription Error</small>
                 </div>
+
                 <button type="submit" class="btn btn-primary">글수정</button>
             </form>
         </div>
