--- a/src/main/resources/templates/raid/raid-members.html
+++ b/src/main/resources/templates/raid/raid-members.html
@@ -18,14 +18,20 @@
                 </button>
             </div>
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="border border-dark p-2 mb-2 border-opacity-50">
-                        <h5 >참가자 설정</h5>
-                    </div>
-
-                </div>
-
+            <div class="border border-dark p-2 mb-2 border-opacity-50" th:with="username=${#authentication.name}">
+                <h5> 참가자 </h5>
+                <ul>
+                    <li class="media mt-3" th:each="member: ${raid.members}">
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1" th:if="${not#strings.equals(member.nickname,raid.account.nickname)}"  >
+                                <svg data-jdenticon-value="testuser123" th:data-jdenticon-value="${member.nickname}" width="32" height="32" class="rounded border bg-light mr-3"></svg>
+                                <span th:text="${member.nickname}"></span>
+                                <span th:text="${member.occupation}"></span>
+                                <a type="button" class="btn btn-danger"  th:href="@{/raid/memberssetdelete/{raidid}/{id}(raidid = ${raid.id},id = ${member.id})}">강퇴</a>
+                            </h5>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
