--- a/src/main/resources/templates/raid/raid-setting.html
+++ b/src/main/resources/templates/raid/raid-setting.html
@@ -5,32 +5,88 @@
 <div th:replace="fragments.html :: main-nav"></div>
 <div class="container">
     <div class="row mt-5 justify-content-center">
+
         <div class="col-2">
             <div th:replace="fragments.html :: raid-settings-menu(currentMenu='set')"></div>
         </div>
-
         <div class="container col-8" style="margin-top:30px">
+            <form class="needs-validation col-sm-10" th:action="@{/raid/raidset/{id}(id = ${raid.id})}"
+                  th:object="${raid}"
+                  method="post" novalidate>
 
-            <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
-                <span th:text="${message}">메시지</span>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="border border-dark p-2 mb-2 border-opacity-50">
-                        <h5>세팅</h5>
-                    </div>
-
+                <label for="title">수정</label>
+                <div class="form-group">
+                    <label for="title">레이드 명</label>
+                    <input id="title" type="text" th:field="*{title}"   th:text="${raid.title}" class="form-control"
+                           placeholder="아브14" aria-describedby="titleHelp" required max="50">
+                    <small id="titleHelp" class="form-text text-muted">
+                        50자 이내로 입력하세요.
+                    </small>
+                    <small class="invalid-feedback">보스을 입력하세요.</small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title
+                        Error</small>
                 </div>
 
-            </div>
+                <div class="form-group">
+                    <label for="shortDescription">짧은 소개</label>
+                    <textarea id="shortDescription" type="textarea"  th:text="${raid.shortDescription}"  th:field="*{shortDescription}" class="form-control"
+                              placeholder="짧게 소개해 주세요." aria-describedby="shortDescriptionHelp" required
+                              maxlength="100"></textarea>
+                    <small id="shortDescriptionHelp" class="form-text text-muted">
+                        100자 이내로 짧은 소개해 주세요.
+                    </small>
+                    <small class="invalid-feedback">짧은 소개를 입력하세요.</small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('shortDescription')}"
+                           th:errors="*{shortDescription}">ShortDescription Error</small>
+                </div>
+
+                <div class="form-group">
+                    <label>레이드몹  </label>
+                    <select name="tag" id="tag" th:value="${raidDto.tag}" >
+                        <option th:selected="${raidDto.tag}=='1'">발탄</option>
+                        <option th:selected="${raidDto.tag}=='2'">아브</option>
+                        <option th:selected="${raidDto.tag}=='3'">쿠크</option>
+                        <option th:selected="${raidDto.tag}=='4'">비아</option>
+                        <option th:selected="${raidDto.tag}=='5'">일리</option>
+                        <option th:selected="${raidDto.tag}=='6'">카멘</option>
+                    </select>
+
+                    <label>인원</label>
+                    <select name="maximum" id="maximum" th:value="${raidDto.maximum}" >
+                        <option th:selected="${raidDto.maximum}=='1'">1</option>
+                        <option th:selected="${raidDto.maximum}=='2'">2</option>
+                        <option th:selected="${raidDto.maximum}=='3'">3</option>
+                        <option th:selected="${raidDto.maximum}=='4'">4</option>
+                        <option th:selected="${raidDto.maximum}=='5'">5</option>
+                        <option th:selected="${raidDto.maximum}=='6'">6</option>
+                        <option th:selected="${raidDto.maximum}=='7'">7</option>
+                        <option th:selected="${raidDto.maximum}=='8'">8</option>
+                    </select>
+
+
+                </div>
+                <!--            <div class="form-group">-->
+                <!--                <label>레이드몹</label>-->
+                <!--                <select  th:field="${raidDto.tag}" th:value="${raidDto.tag}">-->
+                <!--                    <option selected>몬스터 선택</option>-->
+                <!--                    <option th:value="'발탄'" th:text="발탄"></option>-->
+                <!--                    <option th:value="'아브'" th:text="아브"></option>-->
+                <!--                </select>-->
+                <!--            </div>-->
+
+
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block" type="submit"
+                            aria-describedby="submitHelp">수정
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
-
 </div>
-<div th:replace="fragments.html :: footer"></div>
+    <div th:replace="fragments.html :: footer"></div>
+
+
+
 </body>
 </html>
