--- a/src/main/resources/templates/raid/raid-hom.html
+++ b/src/main/resources/templates/raid/raid-hom.html
@@ -29,7 +29,7 @@
                     <div class="border border-dark p-2 mb-2 border-opacity-50">
                         <dl>
                             <h5> 내용 </h5>
-                            <dd th:text="${raid.shortDescription}"></dd>
+                            <dd th:utext="${raid.shortDescription}"></dd>
                         </dl>
                     </div>
 
