--- a/src/main/resources/templates/raid/raid-setting.html
+++ b/src/main/resources/templates/raid/raid-setting.html
@@ -29,7 +29,7 @@
 
                 <div class="form-group">
                     <label for="shortDescription">짧은 소개</label>
-                    <textarea id="shortDescription" type="textarea"  th:text="${raid.shortDescription}"  th:field="*{shortDescription}" class="form-control"
+                    <textarea id="shortDescription" type="textarea" rows="8" th:text="${raid.shortDescription}"  th:field="*{shortDescription}" class="form-control"
                               placeholder="짧게 소개해 주세요." aria-describedby="shortDescriptionHelp" required
                               maxlength="100"></textarea>
                     <small id="shortDescriptionHelp" class="form-text text-muted">
