--- a/src/main/resources/templates/raid/raid-setting.html
+++ b/src/main/resources/templates/raid/raid-setting.html
@@ -17,19 +17,21 @@
                 <label for="title">수정</label>
                 <div class="form-group">
                     <label for="title">레이드 명</label>
-                    <input id="title" type="text" th:field="*{title}"   th:text="${raid.title}" class="form-control"
+
+                    <input id="title" type="text"  th:field="*{title}"  class="form-control"
                            placeholder="아브14" aria-describedby="titleHelp" required max="50">
+
                     <small id="titleHelp" class="form-text text-muted">
                         50자 이내로 입력하세요.
                     </small>
+
                     <small class="invalid-feedback">보스을 입력하세요.</small>
-                    <small class="form-text text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title
-                        Error</small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title Error</small>
                 </div>
 
                 <div class="form-group">
                     <label for="shortDescription">짧은 소개</label>
-                    <textarea id="shortDescription" type="textarea" rows="8" th:text="${raid.shortDescription}"  th:field="*{shortDescription}" class="form-control"
+                    <textarea id="shortDescription" type="textarea" rows="8" th:field="*{shortDescription}" class="form-control"
                               placeholder="짧게 소개해 주세요." aria-describedby="shortDescriptionHelp" required
                               maxlength="100"></textarea>
                     <small id="shortDescriptionHelp" class="form-text text-muted">
@@ -65,14 +67,7 @@
 
 
                 </div>
-                <!--            <div class="form-group">-->
-                <!--                <label>레이드몹</label>-->
-                <!--                <select  th:field="${raidDto.tag}" th:value="${raidDto.tag}">-->
-                <!--                    <option selected>몬스터 선택</option>-->
-                <!--                    <option th:value="'발탄'" th:text="발탄"></option>-->
-                <!--                    <option th:value="'아브'" th:text="아브"></option>-->
-                <!--                </select>-->
-                <!--            </div>-->
+
 
 
                 <div class="form-group">
