--- a/src/main/resources/templates/post/postContent.html
+++ b/src/main/resources/templates/post/postContent.html
@@ -3,9 +3,13 @@
 <head th:replace="fragments.html :: head"></head>
 <body>
 <div th:replace="fragments.html :: main-nav"></div>
-<div class="container" style="margin-top:30px">
-    <div class="row">
-        <div class="col-sm-12">
+<div class="container">
+    <div class="row mt-5 justify-content-center">
+
+        <div class="col-1">
+
+        </div>
+        <div class="container col-9" style="margin-top:30px">
                 <div class="form-group">
                     <h5 th:text="'제목 : ' + ${post.title}"></h5>
                 </div>
@@ -19,41 +23,49 @@
                         <td th:utext="${post.content}" ></td>
                     </dl>
                 </div>
+
             <div style="float:right;" th:with="username=${#authentication.name}">
                 <a type="button" class="btn btn-primary" th:href="@{/post/edit/{id}(id = ${post.id})}" th:if="${#strings.equals(post.account.nickname, username)}">수정</a>
                 <a type="button" class="btn btn-primary" th:href="@{/post/postdelete/{id}(id = ${post.id})}" th:if="${#strings.equals(post.account.nickname, username)}">삭제</a>
             </div>
+
+
+            <div class="container">
+                <table class="table table-hover">
+                    <tr>
+                        <th>번호</th>
+                        <th>작성자</th>
+                        <th>내용</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="comment : ${comments}">
+                        <td class="col-1" th:text="${comment.id}"></td>
+                        <td class="col-2" th:text="${comment.account.nickname}"> </td>
+                        <td class="col-7" th:text="${comment.comment}"></td>
+
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <form action="postContent.html" th:action method="post">
+                <div class="comment-form" style="text-align: center;">
+                    <div class="comment-form2">
+                        <label for="content">댓글 달기</label>
+                        <textarea class="form-control" id="content"  name="comment" rows="3"></textarea>
+                    </div>
+
+                </div>
+                <button style="float:right;"  type="submit" class="btn btn-primary">작성</button>
+            </form>
         </div>
 
+
+
     </div>
 </div>
 
-<form action="postContent.html" th:action method="post">
-<div class="comment-form" style="text-align: center;">
-    <div class="comment-form2" style="width:300px;height: 200px;display: inline-block">
-    <label for="content">댓글 달기</label>
-    <textarea class="form-control" id="content"  name="comment" rows="3"></textarea>
-        <button type="submit" class="btn btn-primary">작성</button>
-    </div>
-</div>
-</form>
-<div class="container">
-    <table class="table table-hover">
-    <tr>
-        <th>번호</th>
-        <th>작성자</th>
-        <th>내용</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="comment : ${comments}">
-        <td th:text="${comment.id}"></td>
-        <td th:text="${comment.account.nickname}"></td>
-        <td th:text="${comment.comment}"></td>
 
-    </tr>
-    </tbody>
-    </table>
-</div>
 </body>
 </html>
