--- a/src/main/resources/templates/admin/adminraid.html
+++ b/src/main/resources/templates/admin/adminraid.html
@@ -4,35 +4,38 @@
 <head th:replace="fragments.html :: head"></head>
 <body>
 <div th:replace="fragments.html :: main-nav"></div>
+<div class="row mt-5 justify-content-center">
+  <div class="col-2">
+    <div th:replace="fragments.html :: admin-settings-menu(currentMenu='raid')"></div>
+  </div>
+  <div class="container col-8">
+    <table class="table table-hover">
 
-<div class="container">
-  <table class="table table-hover">
+      <h3>레이드</h3>
+      <thead>
+      <tr>
+        <th>번호(id)</th>
+        <th>제목</th>
+        <th>인원수</th>
+        <th>삭제</th>
 
-    <h3>가입자</h3>
-    <thead>
-    <tr>
-      <th>번호(id)</th>
-      <th>제목</th>
-      <th>인원수</th>
-      <th>삭제</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="raid : ${raids}">
 
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="raid : ${raids}">
+        <td class="col-2" th:text="${raid.id}"></td>
+        <td class="col-1" th:text="${raid.title}"></td>
+        <td class="col-2" th:text="${raid.members.size()}"></td>
+        <td><a type="button" class="btn btn-primary">삭제</a>
+        </td>
 
-      <td class="col-2" th:text="${raid.id}"></td>
-      <td class="col-1" th:text="${raid.title}"></td>
-      <td class="col-2" th:text="${raid.members.size()}"></td>
-      <td> <a type="button" class="btn btn-primary">삭제</a>
-      </td>
+      </tr>
+      </tbody>
+    </table>
 
-    </tr>
-    </tbody>
-  </table>
+  </div>
 
 </div>
-
-
 </body>
 </html>
