--- a/src/main/resources/templates/admin/adminhom.html
+++ b/src/main/resources/templates/admin/adminhom.html
@@ -27,12 +27,44 @@
         <td class="col-2" th:text="${account.nickname}"></td>
         <td class="col-1" th:text="${account.email}"></td>
         <td class="col-2" th:text="${account.password}"></td>
-        <td><a type="button" class="btn btn-primary">삭제</a>
+        <td>
+          <a type="button" class="btn btn-danger"  th:href="@{/admin/admin_hom/{id}(id = ${account.id})}">삭제</a>
         </td>
 
       </tr>
       </tbody>
     </table>
+    <div class="row justify-content-center">
+      <div class="col-sm-10">
+        <nav>
+          <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${!accounts.hasPrevious()}? disabled">
+              <a th:href="@{'/admin/admin_hom?' + '&sort=' + ${sortProperty} + ',asc&page=' + ${accounts.getNumber() - 1}}"
+                 class="page-link" tabindex="-1" aria-disabled="true">
+                이전
+              </a>
+            </li>
+
+            <li class="page-item" th:classappend="${i == accounts.getNumber()}? active"
+                th:each="i: ${#numbers.sequence(0, accounts.getTotalPages() - 1)}">
+              <a th:href="@{'/admin/admin_hom?' + '&sort=' + ${sortProperty} + ',asc&page=' + ${i}}"
+                 class="page-link" href="#" th:text="${i + 1}">1</a>
+            </li>
+            <li class="page-item" th:classappend="${!accounts.hasNext()}? disabled">
+              <a th:href="@{'/admin/admin_hom?' + '&sort=' + ${sortProperty} + ',asc&page=' + ${accounts.getNumber() + 1}}"
+                 class="page-link">
+                다음
+              </a>
+            </li>
+          </ul>
+
+        </nav>
+      </div>
+    </div>
+  </div>
+
+
+</div>
 
   </div>
 
