--- a/src/main/resources/templates/admin/adminpost.html
+++ b/src/main/resources/templates/admin/adminpost.html
@@ -27,13 +27,40 @@
         <td class="col-2" th:text="${post.id}"></td>
         <td class="col-1" th:text="${post.title}"></td>
         <td class="col-2" th:text="${post.commentList.size()}"></td>
-        <td><a type="button" class="btn btn-primary">삭제</a>
+        <td>
+            <a type="button" class="btn btn-danger"  th:href="@{/admin/admin_post/{id}(id = ${post.id})}">강퇴</a>
         </td>
 
       </tr>
       </tbody>
     </table>
+    <div class="row justify-content-center">
+      <div class="col-sm-10">
+        <nav>
+          <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${!posts.hasPrevious()}? disabled">
+              <a th:href="@{'/admin/admin_post?' + '&sort=' + ${sortProperty} + ',asc&page=' + ${posts.getNumber() - 1}}"
+                 class="page-link" tabindex="-1" aria-disabled="true">
+                이전
+              </a>
+            </li>
 
+            <li class="page-item" th:classappend="${i == posts.getNumber()}? active"
+                th:each="i: ${#numbers.sequence(0, posts.getTotalPages() - 1)}">
+              <a th:href="@{'/admin/admin_post?' + '&sort=' + ${sortProperty} + ',asc&page=' + ${i}}"
+                 class="page-link" href="#" th:text="${i + 1}">1</a>
+            </li>
+            <li class="page-item" th:classappend="${!posts.hasNext()}? disabled">
+              <a th:href="@{'/admin/admin_post?' + '&sort=' + ${sortProperty} + ',asc&page=' + ${posts.getNumber() + 1}}"
+                 class="page-link">
+                다음
+              </a>
+            </li>
+          </ul>
+
+        </nav>
+      </div>
+    </div>
   </div>
 
 
