--- a/src/main/resources/templates/admin/adminhom.html
+++ b/src/main/resources/templates/admin/adminhom.html
@@ -25,9 +25,9 @@
       <tr th:each="account : ${accounts}">
 
         <td class="col-2" th:text="${account.nickname}"></td>
-        <td class="col-1" th:text="${account.email}"></td>
-        <td class="col-2" th:text="${account.password}"></td>
-        <td>
+        <td class="col-2" th:text="${account.email}"></td>
+        <td class="col-4" th:text="${account.password}"></td>
+        <td class="col-2">
           <a type="button" class="btn btn-danger"  th:href="@{/admin/admin_hom/{id}(id = ${account.id})}">삭제</a>
         </td>
 
