--- a/src/main/resources/templates/admin/adminpost.html
+++ b/src/main/resources/templates/admin/adminpost.html
@@ -24,10 +24,10 @@
       <tbody>
       <tr th:each="post : ${posts}">
 
-        <td class="col-2" th:text="${post.id}"></td>
-        <td class="col-1" th:text="${post.title}"></td>
+        <td class="col-1" th:text="${post.id}"></td>
+        <td class="col-5" th:text="${post.title}"></td>
         <td class="col-2" th:text="${post.commentList.size()}"></td>
-        <td>
+        <td class="col-2">
             <a type="button" class="btn btn-danger"  th:href="@{/admin/admin_post/{id}(id = ${post.id})}">삭제</a>
         </td>
 
